# spreadsheet-haskell

./: .gitignore  .travis.yml  CLAUDE.md  README.md  cabal.project  package.yaml  spreadsheet.cabal  stack.yaml
.github/workflows/: ci.yml  haskell-ci.yml
src/: Spreadsheet.hs
src/Spreadsheet/: Cell.hs
test/: SpreadsheetSpec.hs
test/Spreadsheet/: CellExtraSpec.hs  CellSpec.hs
