name:                spreadsheet
version:             0.1.0.0
synopsis:            Model a spreadsheet
description:         Model a spreadsheet
homepage:            https://github.com/FranklinChen/spreadsheet-haskell
license:             BSD3
license-file:        LICENSE
author:              Franklin Chen
maintainer:          franklinchen@franklinchen.com
copyright:           Franklin Chen
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Spreadsheet
                     , Spreadsheet.Simple
  build-depends:       base >= 4 && <= 5

test-suite spec
  type: exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  ghc-options:         -Wall
  main-is:             Spec.hs
  build-depends:       base >= 4 && <= 5
                     , spreadsheet
                     , hspec
                     , QuickCheck

source-repository head
  type:                 git
  location:             https://github.com/FranklinChen/spreadsheet-haskell
