cabal-version: 3.0
name:          spreadsheet
version:       0.1.0.0
synopsis:      Model a spreadsheet
description:   Model a spreadsheet
category:      Game
homepage:      https://github.com/FranklinChen/spreadsheet-haskell
bug-reports:   https://github.com/FranklinChen/spreadsheet-haskell/issues
author:        Franklin Chen
maintainer:    franklinchen@franklinchen.com
copyright:     Franklin Chen
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple
tested-with:   GHC == 9.10.1, GHC == 9.12.2, GHC == 9.14.1
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/FranklinChen/spreadsheet-haskell

library
  exposed-modules: Spreadsheet.Cell
  hs-source-dirs:  src
  default-language: GHC2024
  ghc-options:     -Wall
  build-depends:   base >=4.20 && <5

test-suite spec
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
    Spreadsheet.CellSpec
    Spreadsheet.CellExtraSpec
  hs-source-dirs:   test
  default-language:  GHC2024
  ghc-options:      -Wall
  build-depends:
    base >=4.20 && <5,
    spreadsheet,
    hspec
  build-tool-depends:
    hspec-discover:hspec-discover >=2 && <3
